--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
             <div class="site-branding">
 
-                <div class="site-logo logo">
+                <div class="logo">
                     <a href="/">
                         <img alt="Site Logo" class="dark-logo" src="https://weareenigma.com/assets/resources/img/enigma-en-logo.svg">
                         <!-- <img alt="Site Logo Light" class="light-logo" src="https://weareenigma.com/assets/resources/img/enigma-en-logo.svg"> -->
@@ -779,7 +779,7 @@
 
                                         </p>
                                         <p>
-                                            <b> We Offer:</b> Digital Advisory and Consulting, Integrated Digital
+                                            <b> </b> Digital Advisory and Consulting, Integrated Digital
                                             Marketing Plan
                                             (D.M.P.), User Experience Development, Customer Experience Strategy,
                                             Consumer
@@ -830,7 +830,7 @@
                                             experiences to bridge the gap between the physical &amp; digital world.
                                         </p>
                                         <p>
-                                            <strong>We Offer:</strong> User Interface Design, User Experience Design,
+                                            <strong></strong> User Interface Design, User Experience Design,
                                             Responsive Web Design,
                                             Mobile App Design, Digital Interface Design, Design Systems Creation,
                                             Experience
@@ -874,7 +874,7 @@
 
                                         </p>
                                         <p>
-                                            <strong>We Offer:</strong> Front-End Development, Native &amp; Hybrid Mobile
+                                            <strong></strong> Front-End Development, Native &amp; Hybrid Mobile
                                             Application
                                             Development, Progressive Web Applications, Database Design &amp; Management,
                                             Cloud Infrastructure Services, Testing &amp; Automation
@@ -922,7 +922,7 @@
                                             the ever-changing world of digital marketing.
                                         </p>
                                         <p>
-                                            <strong>We Offer:</strong> Social Media Management, Content Creation &amp;
+                                            <strong></strong> Social Media Management, Content Creation &amp;
                                             Curation, Search Engine
                                             Optimisation, Influencer Management, Auction Media Management, Online
                                             Reputation Management, Media Planning &amp; Buying, Marketing Automation,
