--- a/works.html
+++ b/works.html
@@ -616,7 +616,7 @@
 
     <script src="/assets/vendors/lib/plugins.js"></script>
     <script src="/assets/resources/js/pages-js/preloader.js"></script>
-    <script src="./assets/resources/js/cursor.js"></script>
+    <script rel="preload" as="script" src="https://weareenigma.com/assets/resources/js/cursor.min.js"></script>
     <script src="assets/resources/js/page.js"></script>
     <script>
         var s = Splitting();
