--- a/works.html
+++ b/works.html
@@ -315,10 +315,10 @@
                 </div>
                 <!-- Section Mobile -->
                 <div class="top-p">
-                    The perfect balance of passion, inspiration,
-                    <br> commitment & meticulous artisanship
-                    <br>to build digital products that deliver results
-                    <br>and help businesses grow globally.
+                    The perfect balance of passion,
+                    <br>  inspiration, commitment & meticulous 
+                    <br>artisanship to build digital products
+                    <br> that deliver results and help <br>businesses grow globally.
                 </div>
                 <section class="section-container mob-port w-hde" style="background: #000;
                  padding-top: 20%;">
