--- a/services.html
+++ b/services.html
@@ -226,7 +226,7 @@
                                 <div class="content-p" data-scroll data-scroll-offset="100">
                                     <p>
                                         <span>
-                                            We Offer: Digital Advisory and Consulting, Integrated Digital Marketing Plan
+                                             Digital Advisory and Consulting, Integrated Digital Marketing Plan
                                             (D.M.P.), User Experience Development, Customer Experience Strategy,
                                             Consumer Research, Insights & Target Market Analysis, Digital Capabilities
                                             Development, Persona Design & Customer Segmentation, Competitive Analysis &
@@ -264,7 +264,7 @@
                                 <div class="content-p" data-scroll data-scroll-offset="100">
                                     <p>
                                         <span>
-                                            We Offer: User Interface Design, User Experience Design, Responsive Web
+                                             User Interface Design, User Experience Design, Responsive Web
                                             Design, Mobile App Design, Digital Interface Design, Design Systems
                                             Creation, Experience Mapping, User Flow Mapping, Wireframing & Prototyping,
                                             Illustrations & Animations, Visual Designs, and UI Kits.
@@ -291,7 +291,7 @@
                                 </h3>
                                 <div class="content-p" data-scroll data-scroll-offset="100">
                                     <p>
-                                        <span>We Offer: Front-End Development, Native & Hybrid Mobile Application
+                                        <span> Front-End Development, Native & Hybrid Mobile Application
                                             Development, Progressive Web Applications, Database Design & Management,
                                             Cloud Infrastructure Services, Testing & Automation TECH STACK - HTML, CSS,
                                             Sass, Less, JavaScript, jQuery, GSAP, Vue, React, React Native, Ionic,
@@ -328,7 +328,7 @@
                                 <div class="content-p" data-scroll data-scroll-offset="100">
                                     <p>
                                         <span>
-                                            We Offer: Social Media Management, Content Creation & Curation, Search
+                                             Social Media Management, Content Creation & Curation, Search
                                             Engine Optimisation, Influencer Management, Auction Media Management, Online
                                             Reputation Management, Media Planning & Buying, Marketing Automation, Email
                                             Marketing, Conversion Rate Optimisation, Website & SEO Analysis.
