--- a/services.html
+++ b/services.html
@@ -179,7 +179,7 @@
                         <div class="about-us-content">
                             <div class="welcome-heading d-flex justify-content-sb align-items-start flex-w">
                                 <h1 class="small-h1" data-textcolor="#000"> <span class="opacity-0" data-scroll
-                                        data-scroll-delay="0.1" data-scroll-offset="60">WE LEVERAGE THE POWER OF </span>
+                                        data-scroll-delay="0.1" data-scroll-offset="60"> We leverage the power of </span>
                                 </h1>
                                 <h1 class="b-h1" data-textcolor="#000"> <span class="opacity-0" data-scroll
                                         data-scroll-delay="0.1" data-scroll-offset="60">
@@ -193,21 +193,20 @@
                                     </span>
                                 </h1>
                                 <h1 class="small-h1" data-textcolor="#000"> <span class="opacity-0" data-scroll
-                                        data-scroll-delay="0.1" data-scroll-offset="60">TO ENGINEER GROWTH-
+                                        data-scroll-delay="0.1" data-scroll-offset="60">to Engineer Growth-
                                     </span><br />
                                     <span class="opacity-0" data-scroll data-scroll-delay="0.1"
-                                        data-scroll-offset="60">ORIENTED SOLUTIONS &</span>
+                                        data-scroll-offset="60">Oriented Solutions &</span>
                                     <br /> <span class="opacity-0" data-scroll data-scroll-delay="0.1"
-                                        data-scroll-offset="60">EXPERIENCES THAT PROPEL </span><br /> <span
+                                        data-scroll-offset="60">Experiences that Propel</span><br /> <span
                                         class="opacity-0" data-scroll data-scroll-delay="0.1"
-                                        data-scroll-offset="60">YOUR SUCCESS IN
-                                        THE
+                                        data-scroll-offset="60">your success in the
                                     </span>
 
                                     <br /> <span class="opacity-0" data-scroll data-scroll-delay="0.1"
-                                        data-scroll-offset="60">ENIGMATIC REALM OF BITS </span><br /> <span
+                                        data-scroll-offset="60">Enigmatics realm of bits</span><br /> <span
                                         class="opacity-0" data-scroll data-scroll-delay="0.1" data-scroll-offset="60">&
-                                        BYTES.
+                                        bytes.
                                     </span>
                                     <br />
                                 </h1>
