--- a/strategy.html
+++ b/strategy.html
@@ -430,59 +430,63 @@
                     </div>
                 </section>
                 <!-- Services-points -->
-                <section class="service-points" data-scroll="" data-bgcolor="#fff" data-humcolor="#000">
+                <section class="service-points" data-scroll="" data-bgcolor="#000" data-humcolor="#fff">
                     <div class="container text_anim">
-                        <h2>
-                            <span>Our unique approach has helped us become one of the world’s most influential digital
-                                strategy consultancies. Our digital strategy & planning services include:</span>
-                        </h2>
-                        <ul class="point opacity-0" data-scroll="" data-scroll-delay="0.20" data-scroll-offset="130">
-                            <li><span>
-                                    Digital Advisory and Consulting
-                                </span></li>
-                            <li><span>
-                                    User Experience Development
-                                </span></li>
-                            <li><span>
-                                    Integrated Digital Marketing Plan (D.M.P.)
-                                </span></li>
-                            <li><span>
-                                    Brand & content strategy
-                                </span></li>
-                            <li><span>
-                                    Persona design & customer segmentation
-                                </span></li>
-                            <li><span>
-                                    Customer Experience Strategy
-                                </span></li>
-                            <li><span>
-                                    Consumer research, insights &
-                                    target market analysis
-                                </span></li>
-                            <li><span>
-                                    Digital Capabilities Development
-                                </span></li>
-                            <li><span>
-                                    Digital Marketing and Website
-                                    Performance Audit
-                                </span></li>
-                            <li><span>
-                                    User Experience Development
-                                </span></li>
-                        </ul>
+                        <div class="pointrs-se">
+                            <div class="left-content">
+                            <h2>
+                                <span>Our unique approach has helped us become one of the world’s most influential digital
+                                    strategy consultancies. Our digital strategy & planning services include:</span>
+                            </h2>
+                        </div>
+                            <ul class="point opacity-0" data-scroll="" data-scroll-delay="0.20" data-scroll-offset="130">
+                                <li><span>
+                                        Digital Advisory and Consulting
+                                    </span></li>
+                                <li><span>
+                                        User Experience Development
+                                    </span></li>
+                                <li><span>
+                                        Integrated Digital Marketing Plan (D.M.P.)
+                                    </span></li>
+                                <li><span>
+                                        Brand & content strategy
+                                    </span></li>
+                                <li><span>
+                                        Persona design & customer segmentation
+                                    </span></li>
+                                <li><span>
+                                        Customer Experience Strategy
+                                    </span></li>
+                                <li><span>
+                                        Consumer research, insights &
+                                        target market analysis
+                                    </span></li>
+                                <li><span>
+                                        Digital Capabilities Development
+                                    </span></li>
+                                <li><span>
+                                        Digital Marketing and Website
+                                        Performance Audit
+                                    </span></li>
+                                <li><span>
+                                        User Experience Development
+                                    </span></li>
+                            </ul>
+                        </div>
                     </div>
                 </section>
                 <section class="last">
                     <div class="" data-scroll="">
                         <p class=" gr-b text_anim">
-                            <span>They say a winning strategy is hard to come by. We at Enigma Digital are changing that
-                                belief,<b class="grd">one client at a time!</b></span>
+                            <span><b class="grd">They say a winning strategy is hard to come by. We at Enigma Digital are changing that
+                                belief,one client at a time!</b></span>
 
                         </p>
                     </div>
                 </section>
                 <!-- Marquee -->
-                <section class="marquees" style="background: transparent;">
+                <section class="marquees" style="background: transparent;" data-bgcolor="#fff" data-humcolor="#000">
                     <a href="#">
                         <div class="marquees__inner black-strock" aria-hidden="true" ref="inner"
                             data-cursor-text="Contact Us" data-cursor="-color-white -lg">
