--- a/strategy.html
+++ b/strategy.html
@@ -486,7 +486,7 @@
                     </div>
                 </section>
                 <!-- Marquee -->
-                <section class="marquees" style="background: transparent;" data-bgcolor="#fff" data-humcolor="#000">
+                <section class="marquees" style="background: #fff;"  data-humcolor="#000">
                     <a href="#">
                         <div class="marquees__inner black-strock" aria-hidden="true" ref="inner"
                             data-cursor-text="Contact Us" data-cursor="-color-white -lg">
