--- a/services.html
+++ b/services.html
@@ -348,7 +348,7 @@
 
                     </div>
                 </div>
-                <section class="aproch" data-scroll>
+                <section class="aproch" data-scroll data-bgcolor="#000" data-humcolor="#fff" data-textcolor="#fff">
                     <div class="container text_anim">
                         <h2><span>
                                 OUR APPROACH
@@ -359,7 +359,7 @@
                             <div class="flex-con text_anim">
                                 <div class="ap-no">
                                     <h6><span class="numb">
-                                            01
+                                        ONE
                                         </span>
                                     </h6>
                                 </div>
@@ -374,7 +374,7 @@
                             </div>
                             <div class="flex-con text_anim">
                                 <div class="ap-no">
-                                    <h6><span class="numb">02</span></h6>
+                                    <h6><span class="numb">TWO</span></h6>
                                 </div>
                                 <div class="ap-prah">
                                     <h6><span class="cons">DESIGN</span></h6>
@@ -387,7 +387,7 @@
                             </div>
                             <div class="flex-con text_anim">
                                 <div class="ap-no">
-                                    <h6><span class="numb">03</span></h6>
+                                    <h6><span class="numb">THREE</span></h6>
                                 </div>
                                 <div class="ap-prah">
                                     <h6>
@@ -404,10 +404,11 @@
                         <div class="approach-lis m-0" data-scroll="">
                             <div class="flex-con text_anim">
                                 <div class="ap-no">
-                                    <h6><span class="numb">04</span></h6>
+                                    <h6><span class="numb">FOUR</span></h6>
                                 </div>
                                 <div class="ap-prah">
-                                    <span class="cons">DEVELOP</span>
+                                    <h6>
+                                    <span class="cons">DEVELOP</span></h6>
                                     <p><span>
                                             Incorporate implementation and technical components into a highly functional
                                             system, ready for review.
@@ -416,7 +417,7 @@
                             </div>
                             <div class="flex-con text_anim">
                                 <div class="ap-no">
-                                    <h6><span class="numb">05</span></h6>
+                                    <h6><span class="numb">FIVE</span></h6>
                                 </div>
                                 <div class="ap-prah">
                                     <h6>
@@ -432,7 +433,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="marquees dark" style="background: transparent;">
+                    <div class="marquees light" style="background: transparent;">
                         <a href="#">
                             <div class="marquees__inner" aria-hidden="true" ref="inner" data-cursor-text="WORK"
                                 data-cursor="-color-white -lg">
