--- a/strategy.html
+++ b/strategy.html
@@ -430,7 +430,7 @@
                     </div>
                 </section>
                 <!-- Services-points -->
-                <section class="service-points" data-scroll="" data-bgcolor="#000" data-humcolor="#fff">
+                <section class="service-points" data-scroll="" data-bgcolor="#fff" data-humcolor="#000">
                     <div class="container text_anim">
                         <div class="pointrs-se">
                             <div class="left-content">
@@ -447,7 +447,7 @@
                                         User Experience Development
                                     </span></li>
                                 <li><span>
-                                        Integrated Digital Marketing Plan (D.M.P.)
+                                        Integrated Digital Marketing Plan
                                     </span></li>
                                 <li><span>
                                         Brand & content strategy
@@ -486,7 +486,7 @@
                     </div>
                 </section>
                 <!-- Marquee -->
-                <section class="marquees" style="background: #fff;"  data-humcolor="#000">
+                <section class="marquees" style="background: transparent;" >
                     <a href="#">
                         <div class="marquees__inner black-strock" aria-hidden="true" ref="inner"
                             data-cursor-text="Contact Us" data-cursor="-color-white -lg">
