--- a/services.html
+++ b/services.html
@@ -351,7 +351,7 @@
                 <section class="aproch" data-scroll data-bgcolor="#000" data-humcolor="#fff" data-textcolor="#fff">
                     <div class="container text_anim">
                         <h2><span>
-                                OUR APPROACH
+                            Our Approach
                             </span></h2>
                     </div>
                     <div class="container " data-scroll="">
@@ -377,7 +377,7 @@
                                     <h6><span class="numb">TWO</span></h6>
                                 </div>
                                 <div class="ap-prah">
-                                    <h6><span class="cons">DESIGN</span></h6>
+                                    <h6><span class="cons">Design</span></h6>
                                     <p><span>
                                             Craft a purposeful design to reflect the objectives and indicate the
                                             direction
@@ -385,13 +385,13 @@
                                         </span></p>
                                 </div>
                             </div>
-                            <div class="flex-con text_anim">
+                            <div class="flex-con text_anim m-r">
                                 <div class="ap-no">
                                     <h6><span class="numb">THREE</span></h6>
                                 </div>
                                 <div class="ap-prah">
                                     <h6>
-                                        <span class="cons">IMPLEMENT</span>
+                                        <span class="cons">Implement</span>
                                     </h6>
                                     <p><span>
                                             Bring the design to life in the form of an interactive and functional
@@ -401,14 +401,14 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="approach-lis m-0" data-scroll="">
+                        <div class="approach-lis m-0 m-r" data-scroll="">
                             <div class="flex-con text_anim">
                                 <div class="ap-no">
                                     <h6><span class="numb">FOUR</span></h6>
                                 </div>
                                 <div class="ap-prah">
                                     <h6>
-                                    <span class="cons">DEVELOP</span></h6>
+                                    <span class="cons">Develop</span></h6>
                                     <p><span>
                                             Incorporate implementation and technical components into a highly functional
                                             system, ready for review.
@@ -421,7 +421,7 @@
                                 </div>
                                 <div class="ap-prah">
                                     <h6>
-                                        <span class="cons">DELIVER</span>
+                                        <span class="cons">Deliver</span>
                                     </h6>
                                     <p><span>
                                             Review, refine, test and prepare final product for delivery. Launch and
