--- a/interface-design.html
+++ b/interface-design.html
@@ -587,11 +587,7 @@
     <script src="/assets/vendors/lib/plugins.js"></script>
     <script src="/assets/resources/js/pages-js/preloader.js"></script>
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
-    <script src="./assets/resources/js/cursor.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
-    <script
-        src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
-
+    <script src="./assets/resources/js/cursor.min.js"></script>
     <script src="assets/resources/js/page.js"></script>
     <script src="assets/resources/js/others.js"></script>
 
