--- a/technology-development.html
+++ b/technology-development.html
@@ -165,7 +165,7 @@
         </div>
     </div>
 
-    <main role="main" id="main" style="background:#fff;">
+    <main role="main" id="main">
         <div class="scroll-content smooth-scroll" data-scroll-speed="8">
             <div class="wrapper">
                 <!--top  Section-->
@@ -283,6 +283,13 @@
                                 <img src="/assets/resources/img/Service-elements/Strategy-image-1.png" alt="" />
                             </figure>
                         </div>
+                        
+                    </div>
+                </div>
+
+                <!-- End -->
+                <section class="ser-two" data-bgcolor="#000" data-humcolor="#fff">
+                    <div class="container" data-scroll="">
                         <h2 class="bo-h text_anim">
                             <img src="/assets/resources/img/Service-elements/sun-icon.svg" data-scroll=""
                                 data-scroll-speed="8 ">
@@ -293,65 +300,63 @@
                             </span>
                         </h2>
                     </div>
-                    <section class="ser-two" data-scroll="">
-                        <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
-                            data-scroll-direction="horizontal" data-text="01">
-                            <h2>
-                                <span>FRONT-END DEVELOPMENT</span>
-                            </h2>
-                            <p>HTML, CSS, JavaScript, jQuery, Angular, React, Vue, GSAP</p>
-                        </div>
-                        <div class="item mar-top opacity-0" data-scroll="" data-scroll-speed="9"
-                            data-scroll-direction="horizontal" data-text="02">
-                            <h2>
-                                <span>NATIVE & PROGRESSIVE WEB APPLICATIONS</span>
-                            </h2>
-                            <p>Grails, Node, Java, Spring, Hibernate, Ruby, Apache Maven</p>
-                        </div>
-                        <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
-                            data-scroll-direction="horizontal" data-text="03">
-                            <h2>
-                                <span>DATABASE</span>
-                            </h2>
-                            <p>MySQL, PostgreSQL, Oracle, Mongo, Couch, Cassandra, HBase</p>
-                        </div>
-                        <div class="item mar-top opacity-0" data-scroll="" data-scroll-speed="9"
-                            data-scroll-direction="horizontal" data-text="04">
-                            <h2>
-                                <span>MOBILE APPLICATIONS</span>
-                            </h2>
-                            <p>iOS, Android</p>
-                        </div>
-                        <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
-                            data-scroll-direction="horizontal" data-text="05">
-                            <h2>
-                                <span>INFRASTRUCTURE SERVICES</span>
-                            </h2>
-                            <p>Amazon Web Services, Microsoft Azure, Google Cloud</p>
-                        </div>
-                        <div class="item mar-top item opacity-0" data-scroll="" data-scroll-speed="9"
-                            data-scroll-direction="horizontal" data-text="06">
-                            <h2>
-                                <span>HYBRID</span>
-                            </h2>
-                            <p>Ionic, React Native, Flutter, Xamarin, Phone Gap, Apache Cordova, Intel® XDK</p>
-                        </div>
-                        <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
-                            data-scroll-direction="horizontal" data-text="07">
-                            <h2>
-                                <span>TESTING & AUTOMATION</span>
-                            </h2>
-                            <p>Docker, Jenkins, Protractor, Selenium, Appium, Seetest Automation</p>
-                        </div>
-
-                    </section>
-                </div>
-
-                <!-- End -->
-
+                    <div class="horizontal-sec">
+                    <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                        data-scroll-direction="horizontal" data-text="01">
+                        <h2>
+                            <span>FRONT-END DEVELOPMENT</span>
+                        </h2>
+                        <p>HTML, CSS, JavaScript, jQuery, Angular, React, Vue, GSAP</p>
+                    </div>
+                    <div class="item mar-top opacity-0" data-scroll="" data-scroll-speed="9"
+                        data-scroll-direction="horizontal" data-text="02">
+                        <h2>
+                            <span>NATIVE & PROGRESSIVE WEB APPLICATIONS</span>
+                        </h2>
+                        <p>Grails, Node, Java, Spring, Hibernate, Ruby, Apache Maven</p>
+                    </div>
+                    <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                        data-scroll-direction="horizontal" data-text="03">
+                        <h2>
+                            <span>DATABASE</span>
+                        </h2>
+                        <p>MySQL, PostgreSQL, Oracle, Mongo, Couch, Cassandra, HBase</p>
+                    </div>
+                    <div class="item mar-top opacity-0" data-scroll="" data-scroll-speed="9"
+                        data-scroll-direction="horizontal" data-text="04">
+                        <h2>
+                            <span>MOBILE APPLICATIONS</span>
+                        </h2>
+                        <p>iOS, Android</p>
+                    </div>
+                    <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                        data-scroll-direction="horizontal" data-text="05">
+                        <h2>
+                            <span>INFRASTRUCTURE SERVICES</span>
+                        </h2>
+                        <p>Amazon Web Services, Microsoft Azure, Google Cloud</p>
+                    </div>
+                    <div class="item mar-top item opacity-0" data-scroll="" data-scroll-speed="9"
+                        data-scroll-direction="horizontal" data-text="06">
+                        <h2>
+                            <span>HYBRID</span>
+                        </h2>
+                        <p>Ionic, React Native, Flutter, Xamarin, Phone Gap, Apache Cordova, Intel® XDK</p>
+                    </div>
+                    <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                        data-scroll-direction="horizontal" data-text="07">
+                        <h2>
+                            <span>TESTING & AUTOMATION</span>
+                        </h2>
+                        <p>Docker, Jenkins, Protractor, Selenium, Appium, Seetest Automation</p>
+                    </div>
+</div>
+                </section>
                 <!-- Services-points -->
-                <section class="service-points" data-scroll="">
+                <section class="service-points" data-scroll="" data-bgcolor="#fff" data-humcolor="#000">
                     <div class="container text_anim">
+                        <div class="pointrs-se">
+                            <div class="left-content">
                         <h2 style="padding-right: 0;">
                             <span>We take immense pride in our commitment to provide high-value technology solutions to
                                 our clients. Our technology evangelists are dedicated to creating innovative, connected
@@ -360,7 +365,8 @@
                                 scrum masters strive towards constant improvement and innovation in every aspect of our
                                 processes to deliver the highest quality technology products.</span>
                         </h2>
-
+                        </div>
+</div>
                     </div>
                 </section>
 
