--- a/technology-development.html
+++ b/technology-development.html
@@ -358,14 +358,24 @@
                         <div class="pointrs-se">
                             <div class="left-content">
                         <h2 style="padding-right: 0;">
-                            <span>We take immense pride in our commitment to provide high-value technology solutions to
-                                our clients. Our technology evangelists are dedicated to creating innovative, connected
-                                experiences. Innovation through simplicity is what we do best. Whether it is an
-                                enterprise application or web-based solution, our experienced team of agile experts &
-                                scrum masters strive towards constant improvement and innovation in every aspect of our
-                                processes to deliver the highest quality technology products.</span>
+                            <span>  We work closely with you at all stages of the development process and ensure that
+                                requirements are understood accurately;</span>
                         </h2>
                         </div>
+                        <ul class="point opacity-0" data-scroll="" data-scroll-delay="0.10" data-scroll-offset="130">
+                            <li>User Interface Design</li>
+                            <li>Experience Mapping</li>
+                            <li>User Experience Design</li>
+                            <li>User Flow Mapping</li>
+                            <li>Mobile App Design</li>
+                            <li>Wireframing & Prototyping</li>
+                            <li>Responsive Web Design</li>
+                            <li>Illustrations & Animations</li>
+                            <li>Responsive Web Design</li>
+                            <li>Visual Designs, and</li>
+                            <li>Design Systems Creation</li>
+                            <li>UI Kits</li>
+                        </ul>
 </div>
                     </div>
                 </section>
