--- a/digital-marketing.html
+++ b/digital-marketing.html
@@ -11,7 +11,7 @@
 	<meta name="HandheldFriendly" content="true">
 
 	<!-- SEO Plugin Begins -->
-	<title>Enigma | Digital Marketing & Creative Design Agency India</title>
+	<title>Digital Marketing | Best Digital Marketing Company</title>
 	<link rel="publisher" href="https://plus.google.com/" />
 	<meta property='og:locale' content='en_GB' />
 	<meta property="og:site_name" content="Enigma Digital - Digital Marketing & Creative Design India" />
