--- a/index.html
+++ b/index.html
@@ -1188,7 +1188,7 @@
                             <h3>Let’s Create Something </h3>
                             <div class="ctaa" data-cursor="-exclusion -lg" data-cursor-stick="#cursor-stick-area">
                                 <a href="contact" class="great-cta" href="" id="cursor-stick-area">
-                                    Magical Together
+                                    Great Together
                                     <div class="arow">
                                         <img src="https://weareenigma.com/assets/resources/img/get-arrow.svg" />
                                     </div>
