--- a/technology-development.html
+++ b/technology-development.html
@@ -4,14 +4,17 @@
 <head>
  <meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<meta name="description" content="Digital Marketing & Creative Design Agency in India ensuring visible ROI through Creative Design, Brand Communication, Social Media Marketing, SEO services, &amp; a lot more.">
+	<meta name="description" content="At Enigma, We Work closely with you at every level of the development process to ensure
+    that all your requirements are correctly understood. We specialize in designing and
+    developing complex business apps, e-commerce portals, social media platforms, and mobile
+    applications.">
 	<meta name="keywords" content="Home, marketing, your, with, media, digital, online, social, traffic, advertising, business">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta content="telephone=no" name="format-detection">
 	<meta name="HandheldFriendly" content="true">
 
 	<!-- SEO Plugin Begins -->
-	<title>Enigma | Digital Marketing & Creative Design Agency India</title>
+	<title>Technology Development | Best Technology Development Company</title>
 	<link rel="publisher" href="https://plus.google.com/" />
 	<meta property='og:locale' content='en_GB' />
 	<meta property="og:site_name" content="Enigma Digital - Digital Marketing & Creative Design India" />
